--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
   </head>
   <body>
     <ul id="users">
-      <li id="selected" style="text-decoration: underline;">Active Users</li>
+      <li id="selected" style="text-decoration: underline;">
+        <a href="#" onclick="">Group</a>
+      </li>
     </ul>
+    <div class="header">
+      <p id="recipient">Group Message</p>
+    </div>
     <div class="container">
       <ul id="messages"></ul>
       <form action="">
