Fix taken username alert message plus readme gif examples.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <ul id="users">
       <li id="selected" style="text-decoration: underline;">
-        <a href="#" onclick="">Group</a>
+        <a href="#group" onclick="showGroup()">Group</a>
       </li>
     </ul>
     <div class="header">
